--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "timer.h": "c",
         "isr.h": "c",
         "debug_display.h": "c",
-        "ports.h": "c"
+        "ports.h": "c",
+        "panic.h": "c"
     },
     "C_Cpp.default.includePath": "./include"
 }
